@@ -180,6 +180,9 @@ Release 2.7.0 - UNRELEASED
     YARN-2957. Create unit test to automatically compare YarnConfiguration
     and yarn-default.xml. (rchiang via rkanter)
 
+    YARN-2643. Don't create a new DominantResourceCalculator on every
+    FairScheduler.allocate call. (kasha via rkanter)
+
   OPTIMIZATIONS
 
   BUG FIXES
